--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
 
         <h1>This is a Überschrift</h1>
-        <p>This is a Abschnitt</p>
-        <p> Das ist ein anderer Abschnitt-12:35</p>
+        <p>Erster Abschnitt</p>
+       
     </body>
 
 </html>
